[gd_scene load_steps=6 format=3 uid="uid://ckjpigq7m00pl"]

[ext_resource type="Script" path="res://ui/main_menu/main_menu.gd" id="1_exuqm"]
[ext_resource type="Script" path="res://ui/main_menu/buttons.gd" id="3_o31m0"]

[sub_resource type="Animation" id="Animation_b82qc"]
resource_name = "AnyKeyHint"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnyKeyDown:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_nu8wf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnyKeyDown:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t6ua0"]
_data = {
"AnyKeyHint": SubResource("Animation_b82qc"),
"RESET": SubResource("Animation_nu8wf")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_exuqm")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="L" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 108.0
offset_top = 172.0
offset_right = 308.0
offset_bottom = 372.0
pivot_offset = Vector2(100, 100)
mouse_filter = 2

[node name="Timer" type="Timer" parent="L"]

[node name="I" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 237.0
offset_top = 73.0
offset_right = 437.0
offset_bottom = 273.0
pivot_offset = Vector2(100, 100)
mouse_filter = 2

[node name="Timer" type="Timer" parent="I"]

[node name="G" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 464.0
offset_top = 128.0
offset_right = 664.0
offset_bottom = 328.0
pivot_offset = Vector2(100, 100)
mouse_filter = 2

[node name="Timer" type="Timer" parent="G"]

[node name="H" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 678.0
offset_top = 152.0
offset_right = 878.0
offset_bottom = 408.0
pivot_offset = Vector2(100, 128)
mouse_filter = 2

[node name="Timer" type="Timer" parent="H"]

[node name="T" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 909.0
offset_top = 106.0
offset_right = 1109.0
offset_bottom = 362.0
pivot_offset = Vector2(100, 128)
mouse_filter = 2

[node name="Timer" type="Timer" parent="T"]

[node name="Author" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -30.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "by zhtsu"

[node name="Buttons" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -195.0
offset_right = 152.0
offset_bottom = -32.0
grow_vertical = 0
theme_override_constants/separation = 20
script = ExtResource("3_o31m0")

[node name="Start" type="Label" parent="Buttons"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.945098, 0.909804, 1)
theme_override_font_sizes/font_size = 40
text = "新游戏"

[node name="Button" type="Button" parent="Buttons/Start"]
modulate = Color(0, 0, 0, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Continue" type="Label" parent="Buttons"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.945098, 0.909804, 1)
theme_override_font_sizes/font_size = 40
text = "继续"

[node name="Button" type="Button" parent="Buttons/Continue"]
modulate = Color(0, 0, 0, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Exit" type="Label" parent="Buttons"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.945098, 0.909804, 1)
theme_override_font_sizes/font_size = 40
text = "退出"

[node name="Button" type="Button" parent="Buttons/Exit"]
modulate = Color(0, 0, 0, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnyKeyDown" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = 170.0
offset_right = 180.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.945098, 0.909804, 1)
theme_override_font_sizes/font_size = 60
text = "按下任意按钮"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t6ua0")
}
autoplay = "AnyKeyHint"

[connection signal="mouse_entered" from="Buttons/Start/Button" to="Buttons" method="_on_start_button_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Start/Button" to="Buttons" method="_on_start_button_mouse_exited"]
[connection signal="mouse_entered" from="Buttons/Continue/Button" to="Buttons" method="_on_continue_button_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Continue/Button" to="Buttons" method="_on_continue_button_mouse_exited"]
[connection signal="button_up" from="Buttons/Exit/Button" to="Buttons" method="_on_button_button_up"]
[connection signal="mouse_entered" from="Buttons/Exit/Button" to="Buttons" method="_on_exit_button_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Exit/Button" to="Buttons" method="_on_exit_button_mouse_exited"]
